# embedded-serial-patterns

./: README.md
plain-serial/client_c/: build.sh  plain_serial_c
plain-serial/client_c/src/: Arduino.h  main.c
plain-serial/client_python/: plain_serial.py
plain-serial/client_ruby/: Gemfile  plain_serial.rb
plain-serial/embedded_pio/: CMakeLists.txt
plain-serial/embedded_pio/src/: main.cpp  serial_packet.cpp  serial_packet.h
radiohead/client_c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  radiohead1
radiohead/client_c/lib/RadioHead/: RadioHead.h
radiohead/client_c/src/: Arduino.h  main.cpp
radiohead/embedded_pio/: CMakeLists.txt  platformio.ini
radiohead/embedded_pio/src/: main.cpp  radiohead_adapter.cpp  radiohead_adapter.h
